terraform/main.tf
#############################
# VPC
#############################

resource "aws_vpc" "main" {

  cidr_block           = "10.0.0.0/16"

  enable_dns_hostnames = true

  tags = {

    Name = "production-vpc"
  }
}

#############################
# Public Subnet
#############################

resource "aws_subnet" "public" {

  vpc_id                  = aws_vpc.main.id

  cidr_block              = "10.0.1.0/24"

  map_public_ip_on_launch = true

  availability_zone       = "ap-south-1a"

  tags = {

    Name = "public-subnet"
  }
}

#############################
# Internet Gateway
#############################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "production-igw"
  }
}

#############################
# Route Table
#############################

resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public_assoc" {

  subnet_id      = aws_subnet.public.id

  route_table_id = aws_route_table.public_rt.id
}

#############################
# Security Group
#############################

resource "aws_security_group" "web_sg" {

  name = "web-sg"

  vpc_id = aws_vpc.main.id

  ingress {

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

#############################
# AMI
#############################

data "aws_ami" "amazon_linux" {

  most_recent = true

  owners = ["amazon"]

  filter {

    name = "name"

    values = ["al2023-ami-*"]
  }
}

#############################
# EC2
#############################

resource "aws_instance" "web" {

  ami = data.aws_ami.amazon_linux.id

  instance_type = var.instance_type

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [
    aws_security_group.web_sg.id
  ]

  tags = {

    Name = "Production-WebServer"

    Environment = var.environment
  }
}
